sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: identifier expected but integer literal found.
    for(i<-0 to getNombreValeurs() :Int -1){
                                         ^AlgBubbleSort1:10: error: ')' expected but '}' found.
  }
  ^