sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var fin = false
  while(!fin){
    for(i<-0 to getNombreValeurs() :Int -1){
      if(plusPetit(j:Int, k:Int) :Boolean){
        echange(j:Int, k:Int)
      }
    }
  }
}